--- a/_history.html
+++ b/_history.html
@@ -1,4 +1,4 @@
-<div id="_history" class="containe box text-center">
+<div id="_history" class="container box text-center">
     <div class="row">
         <div class="col-xs-12 col-md-12">
             <div>
