--- a/_shopping.html
+++ b/_shopping.html
@@ -24,7 +24,7 @@
         <div class="col-xs-12">
             <div class="row" id="footerInfo">
                 <div class="col-xs-4" id="shopping_numItems"></div>
-                <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
+                <a type="button" class="col-xs-4 waves-teal btn waves-effects">
                     Submit
                 </a>
             </div>
