--- a/_accSetting.html
+++ b/_accSetting.html
@@ -5,10 +5,11 @@
             <!--<h2>Account Information</h2>-->
             <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
                 transform: translate(-50%, -50%)">
-                <img style="width: 80%; margin: 8%" class="img-circle" id="accSettingAbove-img"
-                     src="placeholder/person5.png"><br>
+                <img style="margin: 8%" class="img-circle" id="accSettingAbove-img"
+                     src="placeholder/person5.png">
+                <div>
                 <a onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
-
+                </div>
 
             </div>
         </div>
