--- a/index.html
+++ b/index.html
@@ -529,6 +529,9 @@
     });
 
     function pageInit() {
+        var textToShow = ['Hello', 'Hi']
+        document.getElementById("index_user-name").innerHTML = textToShow[Math.floor(Math.random()*textToShow.length)];
+
         if (document.cookie.length > 5) {
             loader.userId = document.cookie.substring(5);
             $.ajax({
@@ -546,6 +549,7 @@
                     console.log("init exists");
                     console.log(data);
                     if (!data.isLoggedIn) {
+
                         loader.userId = data.userId;
                         loader.isLoggedIn = true;
                         loader.isDriver = false;
