--- a/_deliveryTime.html
+++ b/_deliveryTime.html
@@ -45,9 +45,9 @@
     }
 
     .calendar tbody td.highlighted {
-        background-color: rgba(127,255,0, 0.5);
+        background-color: #ffdb99;
 
-
+    }
 
 </style>
 <div class="container text-center box">
