--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <!--<img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">-->
             <!--<h2 id="listName_cancelTicket"></h2>-->
-            <h2>Ticket's details</h2>
+            <h2>Ticket's Details</h2>
         </div>
 
 
